help date alignment fix

--- a/main.css
+++ b/main.css
@@ -650,7 +650,7 @@ body{
     letter-spacing: -0.02em;
     color: #303031;
     margin-left: auto;
-    padding-top: 8px;
+    padding-top: 4px;
 }
 
 .help-view-more-button{
